Pagina Divulgação - Superman e Lois
Realizado nova tarefa do curso DEVMEDIA.

Criação de pagina em HTML/CSS

--- a/DevMidia/Advogacia/style.css
+++ b/DevMidia/Advogacia/style.css
@@ -5,7 +5,9 @@ body {
     border-bottom: 1px solid #d5d5d5;
 }
 .secao-largura-limitada {
-    width: 800px;
+    width: 100%;
+    min-width: 320px;
+    max-width: 1024px;
     margin: 0 auto;
 }
 .secao-topo p {
